[gd_scene load_steps=21 format=2]

[ext_resource path="res://Enemies/img/AquaCruiser_C_122x122.png" type="Texture" id=1]
[ext_resource path="res://Enemies/img/AquaCruiser_A_122x122.png" type="Texture" id=2]
[ext_resource path="res://Enemies/img/AquaCruiser_B_122x122.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Enemy_BattleCruiser.gd" type="Script" id=4]
[ext_resource path="res://img/Explosion.png" type="Texture" id=5]


[sub_resource type="CircleShape2D" id=1]
radius = 33.9766

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 122, 122 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[node name="Enemy_BattleCruiser" type="Area2D" groups=[
"player_damager",
]]
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="BattleCruiser" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )

[connection signal="area_entered" from="." to="." method="_on_Enemy_BattleCruiser_area_entered"]
[connection signal="animation_finished" from="BattleCruiser" to="." method="_on_BattleCruiser_animation_finished"]
